2016-01-25  Renlin Li  <renlin.li@arm.com>

	* testsuite/gas/arm/thumb2_it_search.d: New.
	* testsuite/gas/arm/thumb2_it_search.s: New.

2016-01-21  Nick Clifton  <nickc@redhat.com>

	PR gas/19454
	* testsuite/gas/arm/mapshort-elf.d: Fix expected output to cope
	with arm-netbsdelf target.
	* testsuite/gas/arm/blx-bl-convert.d: Skip for netbsdelf.

2016-01-20  Nick Clifton  <nickc@redhat.com>

	PR 19456
	* testsuite/gas/arm/weakdef-1.d: Skip for VxWorks.
	* testsuite/gas/arm/blx-bl-convert.d
	* testsuite/gas/arm/plt-1.d: Likewise.
	* testsuite/gas/arm/reloc-bad.d: Likewise.
	* testsuite/gas/arm/thumb-w-good.d: Likewise.
	* testsuite/gas/arm/thumb2_pool.d: Likewise.
	* testsuite/gas/arm/ldconst.d: Adjust so that it works with VxWorks
	* testsuite/gas/arm/tls_vxworks.d: Update expected output.

	PR 19499
	* doc/as.texinfo (Errors): Correct documentation describing the
	interaction of .file and .line with warning and error messages.

	PR 19458
	* testsuite/gas/arm/armv8_2-a.d: Skip for COFF based targets.
	* testsuite/gas/arm/archv8m-main.d: Likewise.
	* testsuite/gas/arm/archv8m-base.d: Likewise.

2016-01-20  Matthew Wahab  <matthew.wahab@arm.com>

	* testsuite/gas/aarch64/armv8_2-a-illegal.d: New.
	* testsuite/gas/aarch64/armv8_2-a-illegal.l: New.
	* testsuite/gas/aarch64/armv8_2-a-illegal.s: New.

2016-01-20  Mickael Guene  <mickael.guene@st.com>
	    Terry Guo  <terry.guo@arm.com>

	* config/obj-elf.c (obj_elf_change_section) : Allow arm section with
	SHF_ARM_NOREAD section flag.
	* config/tc-arm.h (md_elf_section_letter) : Implement this hook to
	handle letter 'y'.
	(arm_elf_section_letter) : Declare it.
	* config/tc-arm.c (arm_elf_section_letter): Handle letter 'y' to set
	SHF_ARM_NOREAD section flag.
	* doc/c-arm.texi (ARM section attribute): Document the 'y' attribute.

	* testsuite/gas/arm/section-execute-only.s: New test case.
	* testsuite/gas/arm/section-execute-only.d: Expected output.

2016-01-18  Maciej W. Rozycki  <macro@imgtec.com>
