@@ -1,3 +1,11 @@
+2016-01-25  Catherine Moore  <clm@codesourcery.com>
+
+	* config/mips/tc-mips.c (md_begin): Avoid gp-relative addressing
+	if abicalls are in effect.
+	* testsuite/gas/mips/sdata-gp.s: New test.
+	* testsuite/gas/mips/sdata-gp.d: New expected output
+	* testsuite/gas/mips/mips.exp: Run new test.
+
 2016-01-25  Renlin Li  <renlin.li@arm.com>
 
 	* testsuite/gas/arm/thumb2_it_search.d: New.
